[gd_scene load_steps=10 format=3 uid="uid://ddvydg2d3d5kk"]

[ext_resource type="Texture2D" uid="uid://ccdydorcnair8" path="res://Recursos/Animaciones/Objetos/Merchant Ship/Sprites/Chest/Unlocked/3.png" id="1_jsgv0"]
[ext_resource type="Script" path="res://Scripts/cofre.gd" id="1_tlbd2"]
[ext_resource type="Texture2D" uid="uid://cr61itscaam2u" path="res://Recursos/Animaciones/Objetos/Merchant Ship/Sprites/Chest/Unlocked/4.png" id="2_kaqeq"]
[ext_resource type="Texture2D" uid="uid://cmpetsfl6pkv2" path="res://Recursos/Animaciones/Objetos/Merchant Ship/Sprites/Chest/Unlocked/5.png" id="3_pilkf"]
[ext_resource type="Texture2D" uid="uid://cl7537b0nbusa" path="res://Recursos/Animaciones/Objetos/Merchant Ship/Sprites/Chest/Unlocked/6.png" id="4_wfn1e"]
[ext_resource type="Texture2D" uid="uid://cypq0hupncmi3" path="res://Recursos/Animaciones/Objetos/Merchant Ship/Sprites/Chest/Unlocked/7.png" id="5_gows7"]
[ext_resource type="Texture2D" uid="uid://c01x4y23oieu4" path="res://Recursos/Animaciones/Objetos/Merchant Ship/Sprites/Chest/Unlocked/8.png" id="6_oei4w"]

[sub_resource type="SpriteFrames" id="SpriteFrames_do44q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_jsgv0")
}, {
"duration": 1.0,
"texture": ExtResource("2_kaqeq")
}, {
"duration": 1.0,
"texture": ExtResource("3_pilkf")
}, {
"duration": 1.0,
"texture": ExtResource("4_wfn1e")
}, {
"duration": 1.0,
"texture": ExtResource("5_gows7")
}, {
"duration": 1.0,
"texture": ExtResource("6_oei4w")
}],
"loop": true,
"name": &"Desbloqueo",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7y86"]
size = Vector2(28, 22)

[node name="Cofre" type="Area2D"]
script = ExtResource("1_tlbd2")

[node name="Animated_Chest" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_do44q")
animation = &"Desbloqueo"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_n7y86")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
